new calculation and 1 test
