# internal/server/handlers/calculation/calculation.go
@@ -1,8 +1,7 @@
-package calculate
+package calculation
 
 import (
 	"net/http"
-	"party-calc/internal/server/handlers"
 	"party-calc/internal/service"
 
 	"github.com/gin-gonic/gin"
@@ -16,26 +15,25 @@ func NewCalcHandler(s *service.CalcService) *CalcHandler {
 	return &CalcHandler{service: s}
 }
 
-type CalculateRequest struct {
+type GetEventRequest struct {
 	EventId int64 `json:"event_id"`
 }
 
-// @Summary		Calculate event data by Id
-// @Description	Calculate
-// @Tags			Calculate
-// @Accept			json
-// @Produce		json
-// @Param			request	body		CalculateRequest	true	"Calculate Event Request"
-// @Success		200		{object}	service.EventData
-// @Failure		304		{object}	handlers.ErrorResponce
-// @Failure		400		{object}	handlers.ErrorResponce
-// @Router			/calcEvent [get]
+//	@Summary		Calculate event data by Id
+//	@Description	Calculate
+//	@Tags			Calculate
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		GetEventRequest	true	"Calculate Event Request"
+//	@Success		200		{object}	service.EventData
+//	@Failure		304		{object}	handlers.ErrorResponce
+//	@Failure		400		{object}	handlers.ErrorResponce
+//	@Router			/calcEvent [get]
 func (s *CalcHandler) GetEvent(ctx *gin.Context) {
-	var req CalculateRequest
+	var req GetEventRequest
 	err := ctx.ShouldBindJSON(&req)
 	if err != nil {
-		ctx.JSON(http.StatusBadRequest,
-			handlers.ErrorResponce{Message: "Failed parse request", Error: err})
+		ctx.JSON(http.StatusInternalServerError, gin.H{"Failed with request: ": err})
 		return
 	}
 	result, err := s.service.CalculateEvent(ctx, req.EventId)
